test/corpus/functions.txt
=====
basic
=====

def main(): Bool = false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (boolean))))

=====
parameter
=====

def main(a: Int32): Bool = false

---

(program
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_primitive)))
    (type_primitive)
    (expressions
      (boolean))))

=====
parameters
=====

def main(a: Int32, b: Int32): Bool = false

---

(program
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_primitive))
      (parameter
        (identifier)
        (type_primitive)))
    (type_primitive)
    (expressions
      (boolean))))

=====
unit return shorthand
=====

def main() = false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (boolean))))

=====
effect
=====

def main() \ IO = false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (effects
      (identifier))
    (expressions
      (boolean))))

=====
effects
=====

def main() \ {IO, Read, Write} = false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (effects
      (effect_group
        (identifier)
        (identifier)
        (identifier)))
    (expressions
      (boolean))))

=====
polymorphic effect
=====

def main() \ {IO, Read, ef} = false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (effects
      (effect_group
        (identifier)
        (identifier)
        (polymorphic_identifier)))
    (expressions
      (boolean))))

=====
annotation
=====
@Annotation
def main() = ()

---

(program
  (function_declaration
    (annotations
      (annotation))
    (identifier)
    (parameters)
    (expressions
      (unit))))

=====
annotations
=====
@Annotation1 @Annotation2
def main() = ()

---

(program
  (function_declaration
    (annotations
      (annotation)
      (annotation))
    (identifier)
    (parameters)
    (expressions
      (unit))))

=====
type params
=====
def my_function[t: Type](v: t) = ()

---

(program
  (function_declaration
    (identifier)
    (type_parameters
      (type_parameter
        (identifier)
        (kind)))
    (parameters
      (parameter
        (identifier)
        (polymorphic_identifier)))
    (expressions
      (unit))))

=====
user defined operator function
=====

def ->>(f: a -> b \ ef1, g: b -> c \ ef2): a -> c \ ((ef1 + ef2 + (ef1 + ef2))) = x -> g(f(x))

---

(program
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_function
          (polymorphic_identifier)
          (polymorphic_identifier)
          (effects
            (polymorphic_identifier))))
      (parameter
        (identifier)
        (type_function
          (polymorphic_identifier)
          (polymorphic_identifier)
          (effects
            (polymorphic_identifier)))))
    (type_function
      (polymorphic_identifier)
      (polymorphic_identifier))
    (effects
      (effect_group
        (effect_group
          (binary_effect
            (binary_effect
              (polymorphic_identifier)
              (operator)
              (polymorphic_identifier))
            (operator)
            (effect_group
              (binary_effect
                (polymorphic_identifier)
                (operator)
                (polymorphic_identifier)))))))
    (expressions
      (lambda
        (polymorphic_identifier)
        (expressions
          (call_expression
            (identifier)
            (arguments
              (call_expression
                (identifier)
                (arguments
                  (identifier))))))))))

=====
type constraint
=====

def sum(c: t): Int32 with Collection[t] where Collection.Elm[t] ~ Int32 = 
    Collection.toList(c) |> List.sum

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (polymorphic_identifier)))
    return_type: (type_primitive)
    with_clause: (with_clause
      (type
        (identifier)
        (type_arguments
          (polymorphic_identifier))))
    where_clause: (where_clause
      type: (type_field
        (type
          (identifier))
        (type
          (identifier)
          (type_arguments
            (polymorphic_identifier))))
      constraint: (type_primitive))
    body: (expressions
      (binary
        (call_expression
          function: (field
            (identifier)
            (identifier))
          arguments: (arguments
            (identifier)))
        (user_operator)
        (field
          (identifier)
          (identifier))))))

=====
constraint return type
=====

def withAncestors(): #{ ParentOf(String, String),
                        AncestorOf(String, String) | r } = #{
        AncestorOf(x, y) :- ParentOf(x, y).
        AncestorOf(x, z) :- AncestorOf(x, y), AncestorOf(y, z).
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (type_constraint
      tables: (tables
        (table
          (identifier)
          (terms
            (type_primitive)
            (type_primitive)))
        (table
          (identifier)
          (terms
            (type_primitive)
            (type_primitive))))
      variable: (polymorphic_identifier))
    body: (expressions
      (constraints
        (rule
          head: (fact
            table: (identifier)
            terms: (term_list
              (identifier)
              (identifier)))
          body: (rule_body
            (fact
              table: (identifier)
              terms: (term_list
                (identifier)
                (identifier)))))
        (rule
          head: (fact
            table: (identifier)
            terms: (term_list
              (identifier)
              (identifier)))
          body: (rule_body
            (fact
              table: (identifier)
              terms: (term_list
                (identifier)
                (identifier)))
            (fact
              table: (identifier)
              terms: (term_list
                (identifier)
                (identifier)))))))))

=====
polymorphic constraints
=====

def closure(): #{ LabelledEdge(String, l, String),
                  LabelledPath(String, l, String) } with Order[l] = #{
    LabelledPath(x, l, y) :- LabelledEdge(x, l, y).
    LabelledPath(x, l, z) :- LabelledPath(x, l, y), LabelledPath(y, l, z).
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (type_constraint
      tables: (tables
        (table
          (identifier)
          (terms
            (type_primitive)
            (polymorphic_identifier)
            (type_primitive)))
        (table
          (identifier)
          (terms
            (type_primitive)
            (polymorphic_identifier)
            (type_primitive)))))
    with_clause: (with_clause
      (type
        (identifier)
        (type_arguments
          (polymorphic_identifier))))
    body: (expressions
      (constraints
        (rule
          head: (fact
            table: (identifier)
            terms: (term_list
              (identifier)
              (identifier)
              (identifier)))
          body: (rule_body
            (fact
              table: (identifier)
              terms: (term_list
                (identifier)
                (identifier)
                (identifier)))))
        (rule
          head: (fact
            table: (identifier)
            terms: (term_list
              (identifier)
              (identifier)
              (identifier)))
          body: (rule_body
            (fact
              table: (identifier)
              terms: (term_list
                (identifier)
                (identifier)
                (identifier)))
            (fact
              table: (identifier)
              terms: (term_list
                (identifier)
                (identifier)
                (identifier)))))))))
