test/corpus/literals.txt
=====
unit
=====

def main(): Unit = ()

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (unit))))

=====
boolean
=====

def main(): Bool = false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (boolean))))

=====
integer
=====

def main(): Int32 = 123

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (integer))))

=====
float
=====

def main(): Float32 = 123.123

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (float))))

=====
string
=====

def main(): String = "hi there"

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (string))))

=====
char
=====

def main(): Char = 'a'

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (char))))

=====
list
=====

def main(): List[Int32] = List#{1, 2}

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type
      (identifier)
      (type_arguments
        (type_primitive)))
    (expressions
      (list
        (integer)
        (integer)))))

=====
vector
=====

def main(): Vector[Int32] = Vector#{1, 2}

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type
      (identifier)
      (type_arguments
        (type_primitive)))
    (expressions
      (vector
        (integer)
        (integer)))))

=====
set
=====

def main(): Set[Int32] = Set#{1, 2}

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type
      (identifier)
      (type_arguments
        (type_primitive)))
    (expressions
      (set
        (integer)
        (integer)))))

=====
map
=====

def main(): Map[String, Int32] = Map#{"a" => 1, "b" => 2}

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type
      (identifier)
      (type_arguments
        (type_primitive)
        (type_primitive)))
    (expressions
      (map
        (map_item
          (string)
          (integer))
        (map_item
          (string)
          (integer))))))

=====
record
=====

def main(): Unit = { a = 1, b = 2}

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (record
        (record_item
          (identifier)
          (integer))
        (record_item
          (identifier)
          (integer))))))

=====
record extension
=====

def main(): Unit = { +a = 1 | r}

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (record
        (record_item
          (identifier)
          (integer))
        (identifier)))))

=====
record spread
=====

def main(): Unit = { a = 1 | r}

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (record
        (record_item
          (identifier)
          (integer))
        (identifier)))))

=====
record restriction
=====

def main(): Unit = { -a | r}

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (record
        (record_item
          (identifier))
        (identifier)))))
