test/corpus/operators.txt
=====
not
=====

def main(): Bool = not false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (unary
        (boolean)))))

=====
unary minus
=====

def main(): Int32 = -1

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (unary
        (integer)))))

=====
and
=====

def main(): Bool = true and false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (boolean)
        (operator_identifier)
        (boolean)))))

=====
or
=====

def main(): Bool = true or false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (boolean)
        (operator_identifier)
        (boolean)))))

=====
bitwise or
=====

def main(): Bool = 1 ||| 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
bitwise xor
=====

def main(): Int32 = 1 ^^^ 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
bitwise and
=====

def main(): Int32 = 1 &&& 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
equality
=====

def main(): Bool = 1 != 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
comparison
=====

def main(): Bool = 1 <= 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
bitwise shift
=====

def main(): Bool = 1 <<< 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
multiply
=====

def main(): Int32 = 1 * 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
plus
=====

def main(): Int32 = 1 + 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
modulu
=====

def main(): Int32 = 1 mod 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
remainder
=====

def main(): Int32 = 1 rem 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
power
=====

def main(): Int32 = 1 ** 2

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer)))))

=====
unary precedence
=====

def main(): Bool = not true and false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (unary
          (boolean))
        (operator_identifier)
        (boolean)))))

=====
binary precedence
=====

def main(): Int32 = 1 + 2 * true

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (binary
          (integer)
          (operator_identifier)
          (boolean))))))

=====
user defined operator
=====

def main(): Int32 = true |> false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (boolean)
        (user_operator)
        (boolean)))))

=====
composition
=====

def main(): Int32 = true <+> false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (boolean)
        (operator_identifier)
        (boolean)))))

=====
infix function
=====

def main(): Int32 = true `my_func` false

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (boolean)
        (infix_function
          (identifier))
        (boolean)))))

=====
cons
=====

def main(): List[Int32] = 1 :: 2 :: Nil

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type
      (identifier)
      (type_arguments
        (type_primitive)))
    (expressions
      (binary
        (binary
          (integer)
          (operator_identifier)
          (integer))
        (operator_identifier)
        (nil)))))

=====
append
=====

def main(): List[Int32] = 1 :: Nil ::: 2 :: Nil

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type
      (identifier)
      (type_arguments
        (type_primitive)))
    (expressions
      (binary
        (binary
          (integer)
          (operator_identifier)
          (nil))
        (operator_identifier)
        (binary
          (integer)
          (operator_identifier)
          (nil))))))
